# monsoon

BTP_Turtle_Door-main/: CMakeLists.txt  README.md  package.xml
BTP_Turtle_Door-main/launch/: multi_robot_door_bayes.launch
BTP_Turtle_Door-main/scripts/: IMPLEMENTATION_SUMMARY.md  bayes_filter_node_new.py  multi_robot_door_bayes_log.txt
robot_status_estimation/: CMakeLists.txt  package.xml
robot_status_estimation/launch/: robot_belief.launch
robot_status_estimation/scripts/: belief_main_robot.py
