<?xml version="1.0"?>
<package format="2">
  <name>door_state_estimation</name>
  <version>0.0.0</version>
  <description>The Bayes Filter Example</description>

  <maintainer email="you@domain.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
