<?xml version="1.0"?>
<package format="2">
  <name>robot_status_estimation</name>
  <version>0.0.0</version>
  <description>The robot_status_estimation package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
</package>

